--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,11 +7,11 @@ edition = "2018"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [features]
-default = ["rustls_backend", "cache"]
+default = ["cache", "rustls_backend"]
 
 cache = ["serenity/cache"]
-rustls_backend = ["serenity/rustls_backend"]
 native_tls_backend = ["serenity/native_tls_backend"]
+rustls_backend = ["serenity/rustls_backend"]
 
 [dependencies.serenity]
 version = "0.9.0-rc.0"
