--- a/Cargo.toml
+++ b/Cargo.toml
@@ -23,3 +23,8 @@ rustls_backend = ["serenity/rustls_backend"]
 version = "0.9.0-rc.0"
 default-features = false
 features = ["client", "collector", "gateway", "model"]
+
+[dependencies.tokio]
+version = "0.2.22"
+default-features = false
+features = ["rt-core"]
