--- a/examples/e01_prompts/Cargo.toml
+++ b/examples/e01_prompts/Cargo.toml
@@ -11,7 +11,7 @@ edition = "2018"
 path = "../../"
 
 [dependencies.serenity]
-version = "0.9.0-rc.0"
+version = "0.10"
 
 [dependencies]
-tokio = { version = "0.2", features = ["macros"] }
+tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
