--- a/examples/e03_conversion/Cargo.toml
+++ b/examples/e03_conversion/Cargo.toml
@@ -11,9 +11,9 @@ edition = "2018"
 path = "../../"
 
 [dependencies.serenity]
-version = "0.9.0-rc.0"
+version = "0.10"
 default-features = false
 features = ["framework", "standard_framework"]
 
 [dependencies]
-tokio = { version = "0.2", features = ["macros"] }
+tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
