Update to use serenity v0.11

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,6 +12,9 @@ keywords = ["discord", "serenity", "utilities", "rust"]
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
+[workspace]
+members = ["examples/*"]
+
 [features]
 default = ["cache", "rustls_backend"]
 default_native_tls = ["cache", "native_tls_backend"]
@@ -20,15 +23,8 @@ cache = ["serenity/cache"]
 rustls_backend = ["tokio", "serenity/rustls_backend"]
 native_tls_backend = ["tokio", "serenity/native_tls_backend"]
 
-# Tokio v0.2 compatibility
-rustls_tokio_0_2_backend = ["tokio_compat", "serenity/rustls_tokio_0_2_backend"]
-native_tls_tokio_0_2_backend = ["tokio_compat", "serenity/native_tls_tokio_0_2_backend"]
-
-default_tokio_0_2 = ["cache", "rustls_tokio_0_2_backend"]
-default_native_tls_tokio_0_2 = ["cache", "native_tls_tokio_0_2_backend"]
-
 [dependencies.serenity]
-version = "0.10"
+version = "0.11"
 default-features = false
 features = ["client", "collector", "gateway", "model"]
 
@@ -37,11 +33,3 @@ version = "1.0"
 default-features = false
 optional = true
 features = ["rt"]
-
-# Tokio v0.2 compatibility
-[dependencies.tokio_compat]
-package = "tokio"
-version = "0.2"
-optional = true
-default-features = false
-features = ["rt-core"]
